Bug 853732 - Improve Device Storage enumeration to avoid bad performance with some SD card. r=dylands r=dougt a=tef+